--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Freelance</title>
-  <script src="https://kit.fontawesome.com/c5d4023dee.js" crossorigin="anonymous"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/app.css">  
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/c5d4023dee.js" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Bootstrap Freelance</title>
 </head>
 <body>
 
   <header class="main-header py-3 text-white">
     <div class="container">
       <div class="row row-cols-auto justify-content-between align-items-center">
-        <div class="col">
-          Start bootstrap
+        <div class="col fs-3 fw-bold">
+          START BOOTSTRAP 
         </div>
         <div class="col">
-          <ul class="d-none d-md-flex mb-0">
-            <li>link</li>
+          <ul class="d-none d-md-flex mb-0 list-unstyled">
+            <li class="px-3 fs-6 fw-bold">PORTFOLIO</li>
+            <li class="px-3 fs-6 fw-bold">ABOUT</li>
+            <li class="px-3 fs-6 fw-bold">CONTACT</li>
           </ul>
 
           <a href="#" class="d-block d-md-none">
