--- a/index.html
+++ b/index.html
@@ -35,16 +35,32 @@
   </header>
   
   <main>
+    <!-- HERO -->
     <section class="hero py-5 text-white text-center">
       <div class="container">
-        <div class="row">
-          <div class="col">
+        <div class="row justify-content-center">
+            <div class="hero-logo">
+                <img src="./img/avatar.svg" alt="avatar">
+            </div>
+            
+            <div class="hero-title py-2  fs-1 fw-bold">
+                 START BOOTSTRAP 
+            </div>
 
-          </div>
+            <div class="hero-star py-2 fs-4">
+                <i class="fa-solid fa-star"></i>
+            </div>
+
+            <div class="hero-description py-2 fs-5">
+                GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR
+            </div>
+
+
         </div>
       </div>
     </section>
 
+    <!-- PORTFOLIO -->
     <section class="portfolio py-5">
       <div class="container mb-4 text-center">
         <div class="row">
@@ -61,16 +77,7 @@
           <div class="col-md-6 col-xl-4"></div>
          </div>
       </div>
-      <!-- <div class="container">
-        <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
-         <div class="col"></div>
-         <div class="col"></div>
-         <div class="col"></div>
-         <div class="col"></div>
-         <div class="col"></div>
-         <div class="col"></div>
-        </div>
-     </div> -->
+
     </section>
 
     <section class="about text-white py-5">
