FEAT portfolio (title+icon)

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                  START BOOTSTRAP 
             </div>
 
-            <div class="hero-star py-2 fs-4">
+            <div class="star py-2 fs-4">
                 <i class="fa-solid fa-star"></i>
             </div>
 
@@ -55,31 +55,59 @@
                 GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR
             </div>
 
-
         </div>
       </div>
     </section>
 
     <!-- PORTFOLIO -->
     <section class="portfolio py-5">
+        <!-- PORTFOLIO TITLE -->
       <div class="container mb-4 text-center">
         <div class="row">
-          <div class="col"></div>
+          <div class="col fs-2 fw-bold">
+            PORTFOLIO
+          </div>
+
+          <div class="star star-dark py-2 fs-4">
+            <i class="fa-solid fa-star"></i>
+          </div>          
         </div>
       </div>
+
+      <!-- PORTFOLIO ICON -->
       <div class="container">
-         <div class="row gy-4">
-          <div class="col-md-6 col-xl-4"></div>
-          <div class="col-md-6 col-xl-4"></div>
-          <div class="col-md-6 col-xl-4"></div>
-          <div class="col-md-6 col-xl-4"></div>
-          <div class="col-md-6 col-xl-4"></div>
-          <div class="col-md-6 col-xl-4"></div>
+         <div class="row gy-4 port-icon">
+
+          <div class="col-md-6 col-xl-4">
+            <img src="./img/cabin.png" alt="cabina">
+          </div>
+
+          <div class="col-md-6 col-xl-4">
+            <img src="./img/cake.png" alt="torta">
+          </div>
+
+          <div class="col-md-6 col-xl-4">
+            <img src="./img/circus.png" alt="circo">
+          </div>
+
+          <div class="col-md-6 col-xl-4">
+            <img src="./img/game.png" alt="controller">
+          </div>
+
+          <div class="col-md-6 col-xl-4">
+            <img src="./img/safe.png" alt="cassaforte">
+          </div>
+
+          <div class="col-md-6 col-xl-4">
+            <img src="./img/submarine.png" alt="sottomarino">
+          </div>
+
          </div>
       </div>
 
     </section>
 
+    <!-- ABOUT -->
     <section class="about text-white py-5">
       <div class="container  mb-4 text-center">
         <div class="row justify-content-center">
