--- a/index.html
+++ b/index.html
@@ -202,19 +202,73 @@
   </main>
 
   <footer class="text-center text-white page-footer">
-    <section class="py-5">
+
+    <section class="py-5 info-section">
       <div class="container">
         <div class="row gy-4">
-          <div class="col-lg-4"></div>
-          <div class="col-lg-4"></div>
-          <div class="col-lg-4"></div>
+
+            <!-- location -->
+          <div class="col-lg-4">
+            <div class="info-title fs-3">
+                LOCATION
+            </div>
+
+            <div class="info-description fs-5">
+                2215 John Daniel Drive Clark, MO 53243
+            </div>
+          </div>
+
+          <!-- social -->
+          <div class="col-lg-4">
+            <div class="info-title fs-3">
+                AROUND THE WEB
+            </div>
+
+            <div class="info-description info-social-icon fs-5">
+                <div class="row justify-content-center">
+
+                    <div class="col-2">
+                        <i class="fa-brands fa-facebook"></i>
+                    </div>
+
+                    <div class="col-2">
+                        <i class="fa-brands fa-google-plus-g"></i>
+                    </div>
+
+                    <div class="col-2">
+                        <i class="fa-brands fa-twitter"></i>
+                    </div>
+
+                    <div class="col-2">
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </div>
+
+                </div>
+            </div>
         </div>
+
+        <!-- FREELANCER -->
+        <div class="col-lg-4">
+            <div class="info-title fs-3">
+                ABOUT FREELANCER
+            </div>
+
+            <div class="info-description fs-5">
+                Freelance is a free to use, open source 
+                Bootstrap theme create by 
+                <a class="info-start" href="#">
+                    Start Bootstrap
+                </a>
+            </div>
+        </div>
+
+
       </div>
     </section>
 
     <section class="py-3 footer-copy">
       <div class="container">
-        copy
+        Copyright @ boolean 2023
       </div>
     </section>
      
