--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           </div>
 
           <div class="star">
-            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star py-2 fs-4"></i>
           </div>
 
         </div>
@@ -161,7 +161,7 @@
           </div>
 
           <div class="star star-dark">
-            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star py-2 fs-4"></i>
           </div>
 
         </div>
@@ -201,6 +201,7 @@
 
   </main>
 
+
   <footer class="text-center text-white page-footer">
 
     <section class="py-5 info-section">
@@ -227,19 +228,19 @@
             <div class="info-description info-social-icon fs-5">
                 <div class="row justify-content-center">
 
-                    <div class="col-2">
+                    <div class="col-sm-1 col-lg-2">
                         <i class="fa-brands fa-facebook"></i>
                     </div>
 
-                    <div class="col-2">
+                    <div class="col-sm-1 col-lg-2">
                         <i class="fa-brands fa-google-plus-g"></i>
                     </div>
 
-                    <div class="col-2">
+                    <div class="col-sm-1 col-lg-2">
                         <i class="fa-brands fa-twitter"></i>
                     </div>
 
-                    <div class="col-2">
+                    <div class="col-sm-1 col-lg-2">
                         <i class="fa-brands fa-linkedin-in"></i>
                     </div>
 
