--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                  START BOOTSTRAP 
             </div>
 
-            <div class="star py-2 fs-4">
+            <div class="col-6 star py-2 fs-4">
                 <i class="fa-solid fa-star"></i>
             </div>
 
@@ -64,11 +64,11 @@
         <!-- PORTFOLIO TITLE -->
       <div class="container mb-4 text-center">
         <div class="row">
-          <div class="col fs-2 fw-bold">
+          <div class="col-12 fs-2 fw-bold">
             PORTFOLIO
           </div>
 
-          <div class="star star-dark py-2 fs-4">
+          <div class="offset-3 col-6 star star-dark py-2 fs-4">
             <i class="fa-solid fa-star"></i>
           </div>          
         </div>
@@ -116,7 +116,7 @@
             ABOUT
           </div>
 
-          <div class="star">
+          <div class="col-6 star py-2 fs-4">
             <i class="fa-solid fa-star py-2 fs-4"></i>
           </div>
 
@@ -160,7 +160,7 @@
             ABOUT
           </div>
 
-          <div class="star star-dark">
+          <div class="col-6 star star-dark py-2 fs-4">
             <i class="fa-solid fa-star py-2 fs-4"></i>
           </div>
 
